# snake

./: .gitignore  CMake-Toolchain-mingw64.cmake  CMakeLists.txt  field.cpp  field.hpp  game.cpp  game.hpp  main.cpp  makefile  player.cpp  player.hpp  point.h  point.hpp  settings.hpp  ui.cpp  ui.hpp
src/: controller.cpp  controller.hpp  field.cpp  field.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  settings.hpp  ui.cpp  ui.hpp
